--- a/confirmation.html
+++ b/confirmation.html
@@ -13,7 +13,7 @@
             import { } from "https://www.gstatic.com/firebasejs/9.21.0/firebase-firestore.js"
           
         </script>
-        <link rel="stylesheet" href="./styles/styles.css">
+      <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bulma@0.9.4/css/bulma.min.css">
         <title> Confirmation </title>
         <nav>
             <a class="nav-item" href="#aboutMe">About me </a>
