--- a/contact.html
+++ b/contact.html
@@ -12,7 +12,7 @@
             import { getFirestore } from 'https://www.gstatic.com/firebasejs/9.21.0/firebase-firestore.js'
             
         </script>
-        <link rel="stylesheet" href="./styles/styles.css">
+        <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bulma@0.9.4/css/bulma.min.css">
         <title> Wayne Portfolio-Contact</title>
         <nav>
             <a class="nav-item" href="#aboutMe">About me </a>
