--- a/home.html
+++ b/home.html
@@ -12,7 +12,7 @@
             import { getFirestore } from 'https://www.gstatic.com/firebasejs/9.21.0/firebase-firestore.js'
             import {firebasecConfig} from "https://firebasestorage.googleapis.com/v0/b/portfolio-318816.appspot.com/o/configs%2Fconfig.js?alt=media&token=d6c533d4-31b3-4df4-9749-1eebd88dd49a"
         </script>
-        <link rel="stylesheet" href="./styles/styles.css">
+        <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bulma@0.9.4/css/bulma.min.css">
         <title> Wayne Portfolio-Contact</title>
         <nav>
             <a class="nav-item" href="#aboutMe">About me </a>
