--- a/aboutMe.html
+++ b/aboutMe.html
@@ -25,9 +25,15 @@
                 <span aria-hidden="true"></span>
                 <span aria-hidden="true"></span>
               </a>
+              <a role="button" class="navbar-burger" aria-label="menu" aria-expanded="false">
+                <span aria-hidden="true"></span>
+                <span aria-hidden="true"></span>
+                <span aria-hidden="true"></span>
+              </a>
             </div>
           
             <div id="navbarBasicExample" class="navbar-menu">
+
               <div class="navbar-start">
                 <a class="navbar-item">
                   Home
@@ -72,7 +78,9 @@
                   </div>
                 </div>
               </div>
+            
             </div>
+
           </nav>
     </header>
 </html>
